--- a/public/css/leaflet.css
+++ b/public/css/leaflet.css
@@ -475,19 +475,20 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 .leaflet-popup-content {
 	margin: 13px 19px;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Montserrat',sans-serif;
     text-transform: uppercase;
     letter-spacing: 1.2px;
     text-align: center;
 }
-.leaflet-popup-content h4 {
-    font-size: 24px;
-    color: white;
+#page .leaflet-popup-content h4 {
+    font-size: 19px;
+    color: #fff;
     line-height: normal;
     margin: 0;
 }
 .leaflet-popup-content p {
 	margin: 4px 0;
+    color: #b79a5e;
 }
 .leaflet-popup-tip-container {
 	width: 40px;
@@ -512,7 +513,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
-    background: #131313;
+    background: #213c13;
     color: #fff;
     box-shadow: 0 3px 14px rgba(0,0,0,0.4);
 	}
