--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -411,6 +411,7 @@ section {
 ================================================== */
 #howtobuy {
     overflow: hidden;
+    padding-bottom: 70px;
     h2.section-title {
         color: #575757;
         font-size: 52px;
