--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -744,7 +744,7 @@ section {
   border: 3px solid #919191;
   background-color: #b3b3b3;
   text-align: center;
-  font-size: 51px;
+  font-size: 40px;
   color: #FFF;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -754,9 +754,6 @@ section {
   color: #fff;
   background-color: #b79a5e;
   border-color: #a4874d;
-}
-.timeline-card_meta-box {
-  display: inline-block;
 }
 .timeline-card_item {
   display: inline-block;
@@ -806,17 +803,22 @@ section {
   right: auto;
   left: 0;
 }
-.timeline-card_img {
-  width: 100%;
-}
 .timeline-card_info {
-  padding: 20px 30px;
+  padding: 25px 30px;
 }
-.timeline-card_desc p {
+#page .timeline-card_desc h2 {
+  color: #b79a5e;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+#page .timeline-card_desc p {
   margin: 0;
-  font-size: 19px;
-  text-align: center;
-  color: white;
+  font-size: 15px;
+  text-align: left;
+  color: #fff;
+  line-height: 26px;
 }
 @media only screen and (max-width: 979px) {
   .timeline_line {
