--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -451,7 +451,7 @@ section {
 
 .timeline_line-progress {
     width: 100%;
-    height: 110px;
+    height: 0;
     background-color: #b79a5e;
 }
 
