--- a/public/css/less-partials/slider.less
+++ b/public/css/less-partials/slider.less
@@ -1,5 +1,6 @@
 #slider {
-    background: #222;
+    background: #222 url("../../uploads/header.jpg") center bottom no-repeat;
+    background-size: cover;
     overflow: hidden;
     .slider-carousel {
         min-width: 100vw;
