--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -441,7 +441,8 @@ header.fixed .header-menu li {
 /* Slider
 ================================================== */
 #slider {
-  background: #222;
+  background: #222 url("../../uploads/header.jpg") center bottom no-repeat;
+  background-size: cover;
   overflow: hidden;
 }
 #slider .slider-carousel {
@@ -452,6 +453,96 @@ header.fixed .header-menu li {
 ================================================== */
 section {
   padding: 130px 0;
+}
+#maingallery {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding-bottom: 0;
+}
+#maingallery h2 {
+  font-size: 60px;
+  color: var(--main-color-gold);
+  margin-bottom: 0;
+}
+#maingallery img {
+  width: 100%;
+}
+#maingallery .slick {
+  position: relative;
+}
+#maingallery .slick-nav {
+  position: absolute;
+  bottom: -50px;
+  left: 156px;
+  content: "";
+  display: block;
+  width: 480px;
+  height: 100px;
+  background: #213c13 url('../gfx/green-bg.png');
+}
+#maingallery .slick-arrow {
+  height: 70px;
+  width: 70px;
+  display: block;
+  border: 1px solid white;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -35px;
+  left: 470px;
+  z-index: 100;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+#maingallery .slick-arrow i {
+  color: #fff;
+  font-size: 30px;
+}
+#maingallery .slick-arrow.slick-next {
+  left: 550px;
+}
+#maingallery .slick-arrow:hover {
+  background: #b79a5e;
+  color: #fff;
+}
+#maingallery .slick-arrow:hover i {
+  color: white;
+}
+#maingallery .slick-count {
+  font-size: 72px;
+  color: #fff;
+  font-weight: 700;
+  line-height: normal;
+  display: flex;
+  height: 100%;
+  padding-left: 30px;
+  align-items: center;
+}
+#gallery_nav {
+  height: 100%;
+  justify-content: end;
+}
+#gallery_nav a {
+  font-size: 30px;
+  color: #989898;
+  transition: all 200ms linear;
+}
+#gallery_nav li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 40px;
+  border-bottom: 1px solid #f9f9f9;
+  transition: all 200ms linear;
+}
+#gallery_nav li:hover,
+#gallery_nav li.active {
+  border-bottom: 1px solid #cccccc;
+}
+#gallery_nav li:hover a,
+#gallery_nav li.active a {
+  color: #424242;
 }
 #maincta {
   background: white url("../gfx/light-bg.png");
@@ -1310,6 +1401,97 @@ div[class*='col-'].slick-slide {
   padding: 14px 0;
   margin: 0 0 15px 0;
   font-size: 12px;
+}
+.qtip {
+  position: absolute;
+  left: -28000px;
+  top: -28000px;
+  display: none;
+  width: 190px;
+  box-shadow: none;
+}
+.qtip-content {
+  position: relative;
+  overflow: hidden;
+  text-align: left;
+  word-wrap: break-word;
+  color: white !important;
+  font-size: 13px !important;
+  line-height: 16px;
+  padding: 10px 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.qtip-default .qtip-content {
+  background: #183a61;
+}
+.qtip-tip {
+  margin: 0 auto;
+  overflow: hidden;
+  z-index: 10;
+}
+.qtip-tip {
+  visibility: hidden;
+}
+.qtip-tip,
+.qtip-tip canvas {
+  position: absolute;
+  color: #222 !important;
+  border: 0 dashed transparent !important;
+}
+.qtip-tip canvas {
+  top: 0;
+  left: 0;
+}
+.qtip-content h3 {
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+}
+.qtip-content li {
+  border-bottom: 1px solid #3f3f3f;
+  padding: 3px 0;
+  font-weight: 300;
+}
+.qtip-content li b {
+  font-weight: 600;
+}
+/* Kolory dymkow
+'1' => 'Na sprzedaż',
+'2' => 'Rezerwacja',
+'3' => 'Sprzedane',
+'4' => 'Wynajęte'
+*/
+.qtip.status-1 .qtip-content {
+  background: #3a9019;
+  border: 1px solid #3a9019;
+}
+.qtip.status-1 .qtip-content canvas {
+  background: #3a9019;
+}
+.qtip.status-2 .qtip-content {
+  background: #1788c9;
+  border: 1px solid #1788c9;
+}
+.qtip.status-2 .qtip-content canvas {
+  background: #1788c9;
+  color: black;
+}
+.qtip.status-3 .qtip-content {
+  background: #ec2327;
+  border: 1px solid #ec2327;
+}
+.qtip.status-3 .qtip-content canvas {
+  background: #ec2327;
+}
+.qtip.status-4 .qtip-content {
+  background: #de8300;
+  border: 1px solid #de8300;
+}
+.qtip.status-4 .qtip-content canvas {
+  background: #de8300;
 }
 /* Swipebox
 ================================================== */
