--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -170,6 +170,99 @@ section {
     padding: 130px 0;
 }
 
+#maingallery {
+    max-width: 1920px;
+    margin: 0 auto;
+    padding-bottom: 0;
+    h2 {
+        font-size: 60px;
+        color: var(--main-color-gold);
+        margin-bottom: 0;
+    }
+
+
+    img {
+        width: 100%;
+    }
+    .slick {
+        position: relative;
+    }
+    .slick-nav {
+        position: absolute;
+        bottom: -50px;
+        left: 156px;
+        content: "";
+        display: block;
+        width: 480px;
+        height: 100px;
+        background: #213c13 url('../gfx/green-bg.png');
+    }
+
+    .slick-arrow {
+        height: 70px;
+        width: 70px;
+        display: block;
+        border:1px solid white;
+        border-radius: 50%;
+        position: absolute;
+        bottom: -35px;
+        left: 470px;
+        z-index: 100;
+        -webkit-transition: all 200ms linear;
+        -moz-transition: all 200ms linear;
+        -o-transition: all 200ms linear;
+        transition: all 200ms linear;
+        i {
+            color: #fff;
+            font-size: 30px;
+        }
+        &.slick-next {
+            left: 550px;
+        }
+        &:hover {
+            background: #b79a5e;
+            color: #fff;
+            i {
+                color:white
+            }
+        }
+    }
+    .slick-count {
+        font-size: 72px;
+        color: #fff;
+        font-weight: 700;
+        line-height: normal;
+        display: flex;
+        height: 100%;
+        padding-left: 30px;
+        align-items: center;
+    }
+}
+
+#gallery_nav {
+    height: 100%;
+    justify-content: end;
+    a {
+        font-size: 30px;
+        color: #989898;
+        transition: all 200ms linear;
+    }
+    li {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        margin-left: 40px;
+        border-bottom: 1px solid #f9f9f9;
+        transition: all 200ms linear;
+    }
+    li:hover, li.active {
+        border-bottom: 1px solid #cccccc;
+        a {
+            color:#424242
+        }
+    }
+}
+
 #maincta {
     background: white url("../gfx/light-bg.png");
     h2 {
