--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -454,6 +454,32 @@ header.fixed .header-menu li {
 section {
   padding: 130px 0;
 }
+#maininvestment {
+  padding: 100px 0 115px;
+  background: #213c13;
+  margin-bottom: 150px;
+}
+#maininvestment img {
+  margin-bottom: -300px;
+}
+#maininvestment .maininvestment-text {
+  padding: 0 140px;
+}
+#maininvestment .maininvestment-text h2 {
+  color: var(--main-color-gold);
+  font-size: 42px;
+  text-transform: uppercase;
+  margin-bottom: 42px;
+}
+#maininvestment .maininvestment-text p {
+  font-size: 18px;
+  line-height: 30px;
+  color: white;
+}
+#maininvestment .maininvestment-text .bttn {
+  padding: 22px 40px;
+  color: white;
+}
 #maingallery {
   max-width: 1920px;
   margin: 0 auto;
