--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -170,6 +170,33 @@ section {
     padding: 130px 0;
 }
 
+#maininvestment {
+    padding: 100px 0 115px;
+    background: #213c13;
+    margin-bottom: 150px;
+    img {
+        margin-bottom: -300px;
+    }
+    .maininvestment-text {
+        padding:0 140px;
+        h2 {
+            color: var(--main-color-gold);
+            font-size: 42px;
+            text-transform: uppercase;
+            margin-bottom: 42px;
+        }
+        p {
+            font-size: 18px;
+            line-height: 30px;
+            color: white;
+        }
+        .bttn {
+            padding: 22px 40px;
+            color: white;
+        }
+    }
+}
+
 #maingallery {
     max-width: 1920px;
     margin: 0 auto;
