--- a/public/css/less-partials/developro.less
+++ b/public/css/less-partials/developro.less
@@ -285,3 +285,19 @@
 .qtip.status-3 .qtip-content canvas {background:#ec2327}
 .qtip.status-4 .qtip-content {background:#de8300;border:1px solid #de8300}
 .qtip.status-4 .qtip-content canvas {background:#de8300}
+
+.property-desc {
+    position: relative;
+    .room-status {
+        font-size: 16px;
+        padding: 3px 60px !important;
+        text-align: center;
+        position: relative;
+        margin: 20px 0;
+        border-radius: 6px;
+    }
+    .room-status-1 {color: white;background:#3a9019}
+    .room-status-2 {color: white;background:#1788c9}
+    .room-status-3 {color: white;background:#ec2327}
+    .room-status-4 {color: white;background:#de8300}
+}
