--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1711,6 +1711,33 @@ div[class*='col-'].slick-slide {
 .qtip.status-4 .qtip-content canvas {
   background: #de8300;
 }
+.property-desc {
+  position: relative;
+}
+.property-desc .room-status {
+  font-size: 16px;
+  padding: 3px 60px !important;
+  text-align: center;
+  position: relative;
+  margin: 20px 0;
+  border-radius: 6px;
+}
+.property-desc .room-status-1 {
+  color: white;
+  background: #3a9019;
+}
+.property-desc .room-status-2 {
+  color: white;
+  background: #1788c9;
+}
+.property-desc .room-status-3 {
+  color: white;
+  background: #ec2327;
+}
+.property-desc .room-status-4 {
+  color: white;
+  background: #de8300;
+}
 /* Swipebox
 ================================================== */
 html.swipebox-html.swipebox-touch {
