--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -583,6 +583,7 @@ section {
 #page-header {
     height: 440px;
     background-attachment: fixed !important;
+    background-size: contain !important;
     .container, .row {
         height: 100%;
     }
